--- a/src/main/java/vista/JFrameAltas.form
+++ b/src/main/java/vista/JFrameAltas.form
@@ -193,6 +193,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="altaCajaNumControl">
+      <Events>
+        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="altaCajaNumControlKeyTyped"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="altasButtonAgregar">
       <Properties>
@@ -208,6 +211,11 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="altaCajaNombres">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="altaCajaNombresActionPerformed"/>
+        <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="altaCajaNombresKeyReleased"/>
+        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="altaCajaNombresKeyTyped"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel4">
       <Properties>
@@ -215,6 +223,10 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="altaCajaApPaterno">
+      <Events>
+        <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="altaCajaApPaternoKeyReleased"/>
+        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="altaCajaApPaternoKeyTyped"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="altasButtonBorrar">
       <Properties>
@@ -230,6 +242,10 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="altaCajaApMaterno">
+      <Events>
+        <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="altaCajaApMaternoKeyReleased"/>
+        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="altaCajaApMaternoKeyTyped"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel6">
       <Properties>
@@ -261,11 +277,13 @@
     <Component class="javax.swing.JComboBox" name="altaComboCarrera">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="4">
-            <StringItem index="0" value="Item 1"/>
-            <StringItem index="1" value="Item 2"/>
-            <StringItem index="2" value="Item 3"/>
-            <StringItem index="3" value="Item 4"/>
+          <StringArray count="6">
+            <StringItem index="0" value="Selecciona una opcion..."/>
+            <StringItem index="1" value="ISC"/>
+            <StringItem index="2" value="IM"/>
+            <StringItem index="3" value="IIA"/>
+            <StringItem index="4" value="LC"/>
+            <StringItem index="5" value="LA"/>
           </StringArray>
         </Property>
       </Properties>
