--- a/src/main/java/vista/JFrameBajas.form
+++ b/src/main/java/vista/JFrameBajas.form
@@ -199,6 +199,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="bajaCajaNumControl">
+      <Events>
+        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="bajaCajaNumControlKeyTyped"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="BajaButtonBuscar">
       <Properties>
@@ -222,6 +225,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="bajaCajaNombres">
+      <Properties>
+        <Property name="enabled" type="boolean" value="false"/>
+      </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel12">
       <Properties>
@@ -229,6 +235,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="bajaCajaApPaterno">
+      <Properties>
+        <Property name="enabled" type="boolean" value="false"/>
+      </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="bajaButtonEliminar">
       <Properties>
@@ -247,6 +256,9 @@
       </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="bajaCajaApMaterno">
+      <Properties>
+        <Property name="enabled" type="boolean" value="false"/>
+      </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel13">
       <Properties>
@@ -259,8 +271,14 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JSpinner" name="bajaSpinnerEdad">
+      <Properties>
+        <Property name="enabled" type="boolean" value="false"/>
+      </Properties>
     </Component>
     <Component class="javax.swing.JSpinner" name="bajaSpinnerSemestre">
+      <Properties>
+        <Property name="enabled" type="boolean" value="false"/>
+      </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel15">
       <Properties>
@@ -275,13 +293,16 @@
     <Component class="javax.swing.JComboBox" name="bajaComboCarrera">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="4">
-            <StringItem index="0" value="Item 1"/>
-            <StringItem index="1" value="Item 2"/>
-            <StringItem index="2" value="Item 3"/>
-            <StringItem index="3" value="Item 4"/>
+          <StringArray count="6">
+            <StringItem index="0" value="Selecciona una opcion..."/>
+            <StringItem index="1" value="ISC"/>
+            <StringItem index="2" value="IM"/>
+            <StringItem index="3" value="IIA"/>
+            <StringItem index="4" value="LC"/>
+            <StringItem index="5" value="LA"/>
           </StringArray>
         </Property>
+        <Property name="enabled" type="boolean" value="false"/>
       </Properties>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
