--- a/src/main/java/vista/JFrameCambios.form
+++ b/src/main/java/vista/JFrameCambios.form
@@ -210,6 +210,9 @@
       </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="cambiosCajaNumControl">
+      <Events>
+        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="cambiosCajaNumControlKeyTyped"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel27">
       <Properties>
@@ -222,6 +225,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="cambiosCajaNombres">
+      <Events>
+        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="cambiosCajaNombresKeyTyped"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="cambiosBtnGuardarCambios">
       <Properties>
@@ -233,6 +239,9 @@
       </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="cambiosCajaApPaterno">
+      <Events>
+        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="cambiosCajaApPaternoKeyTyped"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel28">
       <Properties>
@@ -248,6 +257,9 @@
       </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="cambiosCajaApMaterno">
+      <Events>
+        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="cambiosCajaApMaternoKeyTyped"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel29">
       <Properties>
@@ -271,11 +283,13 @@
     <Component class="javax.swing.JComboBox" name="cambiosComboCarrera">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="4">
-            <StringItem index="0" value="Item 1"/>
-            <StringItem index="1" value="Item 2"/>
-            <StringItem index="2" value="Item 3"/>
-            <StringItem index="3" value="Item 4"/>
+          <StringArray count="6">
+            <StringItem index="0" value="Selecciona una opcion..."/>
+            <StringItem index="1" value="ISC"/>
+            <StringItem index="2" value="IM"/>
+            <StringItem index="3" value="IIA"/>
+            <StringItem index="4" value="LC"/>
+            <StringItem index="5" value="LA"/>
           </StringArray>
         </Property>
       </Properties>
