--- a/src/main/java/vista/JFrameConsultas.form
+++ b/src/main/java/vista/JFrameConsultas.form
@@ -230,6 +230,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="consultasCajaNombres">
+      <Events>
+        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="consultasCajaNombresKeyTyped"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="consultasBtnBuscar">
       <Properties>
@@ -251,8 +254,14 @@
       </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="consultasCajaApPaterno">
+      <Events>
+        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="consultasCajaApPaternoKeyTyped"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="consultasCajaApMaterno">
+      <Events>
+        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="consultasCajaApMaternoKeyTyped"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JRadioButton" name="radioApMaterno">
       <Properties>
@@ -301,11 +310,13 @@
     <Component class="javax.swing.JComboBox" name="consultasComboCarrera">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="4">
-            <StringItem index="0" value="Item 1"/>
-            <StringItem index="1" value="Item 2"/>
-            <StringItem index="2" value="Item 3"/>
-            <StringItem index="3" value="Item 4"/>
+          <StringArray count="6">
+            <StringItem index="0" value="Selecciona una opcion..."/>
+            <StringItem index="1" value="ISC"/>
+            <StringItem index="2" value="IM"/>
+            <StringItem index="3" value="IIA"/>
+            <StringItem index="4" value="LC"/>
+            <StringItem index="5" value="LA"/>
           </StringArray>
         </Property>
       </Properties>
