Se agregaron verificaciones y llenado de tabla

--- a/src/main/java/vista/JFrameBajas.form
+++ b/src/main/java/vista/JFrameBajas.form
@@ -200,6 +200,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="bajaCajaNumControl">
       <Events>
+        <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="bajaCajaNumControlKeyReleased"/>
         <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="bajaCajaNumControlKeyTyped"/>
       </Events>
     </Component>
@@ -326,6 +327,9 @@
               </Table>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseReleased" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="bajaTablaMouseReleased"/>
+          </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
           </AuxValues>
