--- a/src/main/java/vista/JFrameCambios.form
+++ b/src/main/java/vista/JFrameCambios.form
@@ -211,6 +211,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="cambiosCajaNumControl">
       <Events>
+        <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="cambiosCajaNumControlKeyReleased"/>
         <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="cambiosCajaNumControlKeyTyped"/>
       </Events>
     </Component>
